Fix scrolling on mobile

--- a/docs/styles/countries.css
+++ b/docs/styles/countries.css
@@ -32,6 +32,7 @@ svg path {
 .svg-section div div:nth-child(1){
     grid-area: 1/1;
 	height: 36vh;
+	height: 36svh;
     place-self: center;
     max-width: 25em;
     background-color: #c9c9c9;
